src/test/ui/associated-types/associated-types-project-from-hrtb-in-trait-method.stderr
error[E0212]: cannot extract an associated type from a higher-ranked trait bound in this context
  --> $DIR/associated-types-project-from-hrtb-in-trait-method.rs:11:32
   |
LL |     fn some_method(&self, arg: I::A);
   |                                ^^^^

error: aborting due to previous error

